[package]
name = "liz"
version = "0.1.0"
authors = ["Nicolas S. Montanaro <nicolas.montanaro@foyerapp.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = " 0.1.3"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
percent-encoding = "2.1.0"
titlecase = "1.1.0"
scraper = "0.12.0"
colored = "2"
anyhow = "1.0.32"